
HEAD
====


Xtables-addons 1.23 (February 24 2010)
======================================
- build: support for Linux 2.6.34
- build: remove unused --with-ksource option
- build: remove unneeded --with-xtables option
- build: fix compilations in RAWNAT, SYSRQ and length2 when CONFIG_IPV6=n
- ipset: update to 4.2
- ECHO: fix compilation w.r.t. skb_dst


Xtables-addons 1.22 (January 22 2010)
=====================================
- compat_xtables: support for 2.6.33 skb_iif changes
- geoip: for FHS compliance use /usr/share/xt_geoip instead of /var/geoip
- ipset: enable build of ip_set_setlist.ko
- quota2: add the --no-change mode


Xtables-addons 1.21 (December 09 2009)
======================================
- ACCOUNT: avoid collision with arp_tables setsockopt numbers
- doc: fix option mismatch --gw/--gateway in libxt_TEE.man


Xtables-addons 1.20 (November 19 2009)
======================================
- ipp2p: add more boundary checks
- ipp2p: fix Gnutelle line ending detection
- LOGMARK: remove unknown options from manpage
- ACCOUNT: endianess-correctness
- ipset: install manpage
- ipset: fast forward to v4.1


Xtables-addons 1.19 (October 12 2009)
=====================================
- build: compile fixes for 2.6.31-rt
- build: support for Linux 2.6.32
- ipp2p: try to address underflows
- psd: avoid potential crash when dealing with non-linear skbs
- merge xt_ACCOUNT userspace utilities
- added reworked xt_pknock module
  Changes from pknock v0.5:
  - pknock: "strict" and "checkip" flags were not displayed in `iptables -L`
  - pknock: the GC expire time's lower bound is now the default gc time
    (65000 msec) to avoid rendering anti-spoof protection in SPA mode useless
  - pknock: avoid crash on memory allocation failure and fix memleak
  - pknock: avoid fillup of peer table during DDoS
  - pknock: automatic closing of ports
  - pknock: make non-zero time mandatory for TCP mode
  - pknock: display only pknock mode and state relevant information in procfs